--- a/style.css
+++ b/style.css
@@ -9,3 +9,19 @@
     transition: 1s;
     opacity: 0;
 }
+
+#field {
+    width: 100%;
+    height: 200px;
+    border: 1px solid #000;
+}
+
+.blocks {
+    width: 100px;
+    height: 100px;
+    margin: 8px;
+    background-color: #7a3131;
+    color: #ffffff;
+    text-align: center;
+    display: inline-block;
+}
